Bug fix - navbar overlapping issue

--- a/app/assets/stylesheets/front_page.sass
+++ b/app/assets/stylesheets/front_page.sass
@@ -12,6 +12,7 @@
     font-family: 'Lobster', cursive
     font-weight: bold
     z-index: 2
+    left: auto
 
   #cover
     position: relative
